2002-10-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr_mmx_R8G8B8_R8G8B8_R8G8B8A8_P.S: New file

	* src/helper/sp-canvas-util.c (sp_canvas_clear_buffer): Be quick

	* src/helper/sp-canvas.h: Moved update flags back here

	* src/display/canvas-arena.c (sp_canvas_arena_update): Sor updates according to affine (again)

	* src/libnr/have_mmx.S: New file (copied from gdk-pixbuf)

	* configure.in (use_mmx_asm): Check for mmx

	* src/libnr/nr-compose.c (nr_R8G8B8A8_P_R8G8B8A8_P_A8_RGBA32): Use mmx if present

	* src/libnr/nr_mmx_R8G8B8A8_P_R8G8B8A8_P_A8_RGBAP.S: Assembler code

2002-10-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.h: Changed object type to SPCanvas, cleanup

	* src/helper/sp-canvas.c: Ditto

2002-10-10  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c: Local version of praised GnomeCanvas

	* src/helper/sp-canvas.h: Local version of praised GnomeCanvas

	* src/libnr/nr-gradient.c (nr_rgradient_render_generic_symmetric): Optimize

2002-10-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-blit.c (nr_blit_pixblock_mask_rgba32): New method

	* src/libnr/nr-gradient.c (nr_rgradient_renderer_setup): Do r == 0 correctly
	(nr_rgradient_render_generic_optimized): Optimize
	(nr_rgradient_render_block_end): New method

	* configure.in: Version 0.28pre

2002-10-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.27

	* src/text-context.c (sp_text_context_root_handler): Only turn off unimode,
	if there really is string associated with key

2002-10-09  Masatake YAMATO  <jet@gyve.org>

	* src/sp-image.c (load_splines): changed the order
	of arguments. this change is for frontline-0.5.3.

	* configure.in: required frontline-0.5.3.
	To build sodipodi with frontline you have to get:
	http://autotrace.sourceforge.net/snapshots/autotrace-0.30.8.tar.gz
	http://autotrace.sourceforge.net/frontline/frontline-0.5.3.tar.gz

2002-10-08  Lauris Kaplinski  <lauris@kaplinski.com>
