@@ -1,5 +1,7 @@
 2002-10-13  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/libnr/testnr.c: Speed test
+
 	* src/libnr/nr_mmx_R8G8B8_R8G8B8_R8G8B8A8_P.S: New file
 
 	* src/helper/sp-canvas-util.c (sp_canvas_clear_buffer): Be quick
